ui: adapt new backend response + pipeline

--- a/frontend/src/pages/test/Timetable/styles.css
+++ b/frontend/src/pages/test/Timetable/styles.css
@@ -44,6 +44,7 @@ tr:nth-child(even) {
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .legend > div {
