--- a/frontend/src/pages/test/Timetable/styles.css
+++ b/frontend/src/pages/test/Timetable/styles.css
@@ -5,7 +5,7 @@ table {
 
 th,
 td {
-  border: 1px solid black;
+  border: 1px solid #f2f2f2 !important;
   padding: 10px;
   text-align: center;
 }
@@ -19,7 +19,7 @@ td {
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
 }
 
 .lec-cell {
